--- a/public/themes/admin/css/custom.css
+++ b/public/themes/admin/css/custom.css
@@ -153,3 +153,14 @@
 .fa.fa-circle {
   color: #85C34A;
 }
+
+/* Table level indent */
+span.item-level-0 {
+  padding-left: 0;
+}
+span.item-level-1 {
+  padding-left: 20px;
+}
+span.item-level-2 {
+  padding-left: 40px;
+}
